--- a/paimon-quests/paimon-quests-vue/package.json
+++ b/paimon-quests/paimon-quests-vue/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --open --port 9090",
+    "serve": "vue-cli-service serve",
+    "start": "vue-cli-service serve --open --port 9090",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
