--- a/paimon-quests/src/main/resources/application.properties
+++ b/paimon-quests/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+server.port=9696
 
+# H2 configs
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:file:C://data/paimon-quests
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
+
+# MySQL
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+
+## MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/paimon-quests?serverTimeZone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
