--- a/paimon-quests/paimon-quests-vue/package.json
+++ b/paimon-quests/paimon-quests-vue/package.json
@@ -9,9 +9,12 @@
     "start": "vue-cli-service serve --open --port 4000"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@popperjs/core": "^2.10.2",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "jquery": "^1.9.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3"
   },
