Back-end: Remplacer create-drop par update

--- a/paimon-quests/src/main/resources/application.properties
+++ b/paimon-quests/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.port=9696
 #spring.h2.console.path=/h2
 
 # MySQL
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 ## MySQL
