--- a/paimon-quests/paimon-quests-vue/package.json
+++ b/paimon-quests/paimon-quests-vue/package.json
@@ -18,6 +18,7 @@
     "jquery": "^1.9.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
+    "vuelidate": "^0.7.6",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
