--- a/paimon-quests/paimon-quests-vue/package.json
+++ b/paimon-quests/paimon-quests-vue/package.json
@@ -17,9 +17,12 @@
     "core-js": "^3.6.5",
     "jquery": "^1.9.1",
     "vue": "^2.6.14",
+    "vue-cookies": "^1.7.4",
     "vue-router": "^3.5.3",
+    "vue-sweetalert2": "^5.0.2",
     "vuelidate": "^0.7.6",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
