--- a/paimon-quests/pom.xml
+++ b/paimon-quests/pom.xml
@@ -59,8 +59,14 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-    </dependencies>
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>31.0.1-jre</version>
+        </dependency>
 
+    </dependencies>
     <build>
         <plugins>
             <plugin>
